# Cyber-Threat-Range-IDE

./: .gitignore  LICENSE  README.md  build.bat  build.sh  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_output.txt  test_output_batch1.txt  test_output_final.txt  test_output_final_fix.txt  test_output_fixcheck.txt  test_output_full.txt  test_output_full_v2.txt  test_output_full_v3.txt  test_output_full_v4.txt  test_output_full_v5.txt
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/analysis/: constraint_gen.rs  cross_slicer.rs  indexer.rs  integration_tests.rs  mod.rs  prover.rs  python_parser.rs  slicer.rs  slicer_tests.rs  solver.rs
src-tauri/src/api/: ai_cmds.rs  code_runner.rs  editor_cmds.rs  exploit_cmds.rs  extension_cmds.rs  git_cmds.rs  interactive_runner.rs  lsp_cmds.rs  mod.rs  prover_cmds.rs  search_cmds.rs  security_cmds.rs  shell_cmds.rs
src-tauri/src/services/: exploit_sandbox.rs  mod.rs
src-tauri/src/services/ai/: mod.rs
src-tauri/src/services/code/: mod.rs
src-tauri/src/services/project/: mod.rs
src-tauri/src/services/security/: mod.rs
src-tauri/src/services/terminal/: mod.rs
src/components/: AIChatbot.tsx  ActivityBar.tsx  AttackVisualization.tsx  CodeEditor.tsx  CodeRunner.tsx  DebugPanel.tsx  Editor.tsx  ExploitPanel.tsx  ExploitProverPanel.tsx  Explorer.tsx  ExtensionsPanel.tsx  FileExplorer.tsx  GitPanel.tsx  HackerModeToggle.tsx  InteractiveCodeRunner.tsx  MatrixRain.tsx  (+16 more)
vulnerable-demo/: SAFE.md  danger.js
(+29 files in other folders)
